--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -16,7 +16,7 @@
   // font size
   --h1-font-size: 3rem;
   --h2-font-size: 2.4rem;
-  --h3-font-size: 1.953rem;
+  --h3-font-size: 1.8rem;
   --normal-font-size: 1.4rem;
   --small-font-size: 1.2rem;
   --icon-font-size: 2rem;
@@ -30,6 +30,10 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+*::before, *::after {
   box-sizing: border-box;
 }
 
