--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -47,6 +47,11 @@
   }
 }
 
+.banner {
+  margin: 3rem 0;
+  line-height: 0;
+}
+
 @media screen and (min-width: 1024px) {
   .policy {
     display: block;
