make header dynamic

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -11,7 +11,7 @@
   --text-color-light: #999;
   --border-color: #ebebeb;
   --bg-color: #f7f7f7;
-  --header-height-mobile: 83px;
+  --header-height-mobile: 6rem;
 
   // font size
   --h1-font-size: 3rem;
