--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,6 +1,7 @@
 .banner {
   position: relative;
   overflow: hidden;
+  display: none;
   &__link {
     &:hover::before {
       width: 100%;
@@ -18,3 +19,11 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .banner {
+    display: block;
+  }
+}
+
+
