make dropdown cart items

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -7,7 +7,6 @@
   z-index: 100;
   background-color: #fff;
   height: var(--header-height-mobile);
-  
 }
 .header-mobile {
   &__content {
@@ -58,7 +57,7 @@
 }
 .header-desktop {
   display: none;
-  
+
   &__top {
     height: 9rem;
     padding: 2.5rem 0;
@@ -107,6 +106,7 @@
     height: 100%;
     gap: 1.2rem;
     cursor: pointer;
+    position: relative;
     &-icon {
       display: block;
       width: 4.2rem;
@@ -204,6 +204,7 @@
   top: -100%;
   left: 0;
   z-index: 100;
+
   &__content {
     display: flex;
     justify-content: space-between;
@@ -232,6 +233,7 @@
     height: 100%;
     gap: 1.2rem;
     cursor: pointer;
+    position: relative;
     &-icon {
       display: block;
       width: 4.2rem;
@@ -333,6 +335,127 @@
   }
 }
 
+.header-cart-dropdown {
+  position: absolute;
+  right: 0;
+  top: calc(100% + 1.5rem);
+  width: 32rem;
+  background-color: #fff;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+  z-index: 100;
+  &::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 3rem;
+
+    background-color: transparent;
+    top: -2rem;
+    left: 0;
+  }
+  &__empty {
+    text-align: center;
+    padding: 1.5rem; 
+    font-size: var(--small-font-size); 
+  }
+  &__content {
+  }
+  &__list {
+    padding-bottom: 1rem;
+    max-height: 245px;
+    overflow: auto;
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #ddd;
+      border-radius: 20px;
+    }
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      background-color: transparent;
+    }
+  }
+  &__item {
+    background-color: var(--bg-color);
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    border-bottom: 1px solid var(--border-color);
+
+    &:nth-child(even) {
+      background-color: #fff;
+    }
+    &-image {
+      width: 80px;
+      padding: 1rem;
+      flex-shrink: 0;
+
+      img {
+        border: 1px solid var(--border-color);
+        padding: 0.5rem;
+        border-radius: 4px;
+        background-color: #fff;
+      }
+    }
+    &-info {
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+      padding-right: 1rem;
+      align-items: center;
+      font-size: var(--small-font-size);
+      gap: 1rem;
+    }
+    &-name {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      &:hover {
+        color: var(--primary-color-hover);
+      }
+    }
+    &-remove {
+      &:hover {
+        color: var(--primary-color-hover);
+      }
+    }
+  }
+  &__action {
+    padding: 1.4rem 1.6rem 1rem;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &-link {
+      padding: 0.8rem 2rem;
+      background-color: var(--primary-color);
+      color: #fff;
+      &.action--view-cart {
+        background-color: var(--text-color);
+        &:hover {
+          background-color: var(--primary-color);
+        }
+      }
+      &.action--checkout:hover {
+        background-color: var(--text-color);
+      }
+    }
+  }
+}
+
+.header-dynamic__cart:hover .header-cart-dropdown,
+.header-desktop__cart:hover .header-cart-dropdown {
+  opacity: 1;
+  visibility: visible;
+  top: calc(100% + 0.5rem);
+}
+
 @media screen and (min-width: 1024px) {
   .header-wrapper {
     position: unset;
@@ -348,14 +471,11 @@
     display: block;
     visibility: hidden;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out, top 0.3s ease-in-out;
+    transition: opacity 0.5s ease-in-out, top 0.5s ease-in-out;
     &.active {
       top: 0;
       visibility: visible;
       opacity: 1;
     }
   }
-  
-  
-  
 }
