--- a/src/components/GlobalStyles/Grid.scss
+++ b/src/components/GlobalStyles/Grid.scss
@@ -83,6 +83,20 @@
   .sm-0 {
     display: none;
   }
+  .sm-1,
+  .sm-2,
+  .sm-3,
+  .sm-4,
+  .sm-5,
+  .sm-6,
+  .sm-7,
+  .sm-8,
+  .sm-9,
+  .sm-10,
+  .sm-11,
+  .sm-12 {
+    display: block;
+  }
   .sm-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -148,6 +162,20 @@
   .md-0 {
     display: none;
   }
+  .md-1,
+  .md-2,
+  .md-3,
+  .md-4,
+  .md-5,
+  .md-6,
+  .md-7,
+  .md-8,
+  .md-9,
+  .md-10,
+  .md-11,
+  .md-12 {
+    display: block;
+  }
   .md-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -212,6 +240,20 @@
   }
   .lg-0 {
     display: none;
+  }
+  .lg-1,
+  .lg-2,
+  .lg-3,
+  .lg-4,
+  .lg-5,
+  .lg-6,
+  .lg-7,
+  .lg-8,
+  .lg-9,
+  .lg-10,
+  .lg-11,
+  .lg-12 {
+    display: block;
   }
   .lg-1 {
     flex: 0 0 8.33333%;
