completed page category

--- a/src/pages/DetailCategory/DetailCategory.module.scss
+++ b/src/pages/DetailCategory/DetailCategory.module.scss
@@ -1,7 +1,10 @@
+.wrapper {
+  margin: 2rem 0;
+}
 .filter {
   &-wrapper {
     border: 1px solid var(--border-color);
-
+    border-radius: 3px;
     .clear-filter {
       padding-top: 0.5rem;
       padding-bottom: 2rem;
@@ -217,6 +220,8 @@
   margin-bottom: 3rem;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
   &__left {
     display: flex;
     gap: 1rem;
@@ -259,12 +264,42 @@
       }
     }
   }
+  &__right {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  &__sort-text,&__show-item-text {
+    font-size: var(--small-font-size);
+    text-transform: capitalize;
+  }
+}
+
+.pagination-wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
   .filter-top-panel {
+    flex-direction: row;
     &__grid {
+     
+    }
+    &__right {
+      width: 50%;
+      flex-direction: row;
+      gap: 1.5rem;
+    }
+    &__sort, &__show-item {
+      width: 50%;
       display: flex;
+      gap: 0.5rem;
+      align-items: center;
+    }
+    
+    &__dropdown {
+      flex: 1;
     }
   }
 }
@@ -272,6 +307,7 @@
 @media screen and (min-width: 992px) {
   .filter-top-panel {
     &__btn-show-sidebar {
+
     }
   }
 }
@@ -280,6 +316,9 @@
   .filter-top-panel {
     &__btn-show-sidebar {
       display: none;
+    }
+    &__grid {
+      display: flex;
     }
   }
 }
