--- a/src/components/GlobalStyles/Grid.scss
+++ b/src/components/GlobalStyles/Grid.scss
@@ -17,6 +17,16 @@
   padding-left: 4px;
 }
 
+.row.no-gutters {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.row.no-gutters .col {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .xs-0 {
   display: none;
 }
