--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -4,8 +4,8 @@
   margin-top: var(--header-height-mobile);
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .content {
-    margin-top: 0;
+    margin-top: 1rem;
   }
 }
