--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -80,5 +80,41 @@ button {
   cursor: pointer;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th, table td {
+  text-align: left;
+  // white-space: nowrap;
+}
+
+table th {
+  background-color: var(--bg-color);
+  text-transform: capitalize;
+  padding: .5rem 1rem;
+}
+table td {
+  background-color: #fff;
+  padding: 1rem 1rem;
+}
+
+table tbody tr {
+  border-top: 1px solid var(--border-color);
+}
+
+
+
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+
 
 
