--- a/src/components/GlobalStyles/Grid.scss
+++ b/src/components/GlobalStyles/Grid.scss
@@ -78,7 +78,42 @@
   flex: 0 0 100%;
   max-width: 100%;
 }
-@media screen and (min-width: 768px) {
+
+.xs-o-1 {
+  margin-left: 8.33333%;
+}
+.xs-o-2 {
+  margin-left: 16.66667%;
+}
+.xs-o-3 {
+  margin-left: 25%;
+}
+.xs-o-4 {
+  margin-left: 33.33333%;
+}
+.xs-o-5 {
+  margin-left: 41.66667%;
+}
+.xs-o-6 {
+  margin-left: 50%;
+}
+.xs-o-7 {
+  margin-left: 58.33333%;
+}
+.xs-o-8 {
+  margin-left: 66.66667%;
+}
+.xs-o-9 {
+  margin-left: 75%;
+}
+.xs-o-10 {
+  margin-left: 83.33333%;
+}
+.xs-o-11 {
+  margin-left: 91.66667%;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .container {
     max-width: 750px;
   }
@@ -155,9 +190,44 @@
     flex: 0 0 100%;
     max-width: 100%;
   }
+
+  .sm-o-1 {
+    margin-left: 8.33333%;
+  }
+  .sm-o-2 {
+    margin-left: 16.66667%;
+  }
+  .sm-o-3 {
+    margin-left: 25%;
+  }
+  .sm-o-4 {
+    margin-left: 33.33333%;
+  }
+  .sm-o-5 {
+    margin-left: 41.66667%;
+  }
+  .sm-o-6 {
+    margin-left: 50%;
+  }
+  .sm-o-7 {
+    margin-left: 58.33333%;
+  }
+  .sm-o-8 {
+    margin-left: 66.66667%;
+  }
+  .sm-o-9 {
+    margin-left: 75%;
+  }
+  .sm-o-10 {
+    margin-left: 83.33333%;
+  }
+  .sm-o-11 {
+    margin-left: 91.66667%;
+  }
+
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   .container {
     max-width: 970px;
   }
@@ -234,6 +304,40 @@
     flex: 0 0 100%;
     max-width: 100%;
   }
+  .md-o-1 {
+    margin-left: 8.33333%;
+  }
+  .md-o-2 {
+    margin-left: 16.66667%;
+  }
+  .md-o-3 {
+    margin-left: 25%;
+  }
+  .md-o-4 {
+    margin-left: 33.33333%;
+  }
+  .md-o-5 {
+    margin-left: 41.66667%;
+  }
+  .md-o-6 {
+    margin-left: 50%;
+  }
+  .md-o-7 {
+    margin-left: 58.33333%;
+  }
+  .md-o-8 {
+    margin-left: 66.66667%;
+  }
+  .md-o-9 {
+    margin-left: 75%;
+  }
+  .md-o-10 {
+    margin-left: 83.33333%;
+  }
+  .md-o-11 {
+    margin-left: 91.66667%;
+  }
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -316,5 +420,41 @@
   .lg-12 {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+  .lg-o-1 {
+    margin-left: 8.33333%;
+  }
+  .lg-o-2 {
+    margin-left: 16.66667%;
+  }
+  .lg-o-2-4 {
+    margin-left: 20%;
+  }
+  .lg-o-3 {
+    margin-left: 25%;
+  }
+  .lg-o-4 {
+    margin-left: 33.33333%;
+  }
+  .lg-o-5 {
+    margin-left: 41.66667%;
+  }
+  .lg-o-6 {
+    margin-left: 50%;
+  }
+  .lg-o-7 {
+    margin-left: 58.33333%;
+  }
+  .lg-o-8 {
+    margin-left: 66.66667%;
+  }
+  .lg-o-9 {
+    margin-left: 75%;
+  }
+  .lg-o-10 {
+    margin-left: 83.33333%;
+  }
+  .lg-o-11 {
+    margin-left: 91.66667%;
   }
 }
