--- a/src/components/ProductInfo/ProductInfo.module.scss
+++ b/src/components/ProductInfo/ProductInfo.module.scss
@@ -32,13 +32,18 @@
   }
   &-price {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     margin-bottom: 1.5rem;
+    align-items: center;
     .price--new {
       color: var(--primary-color);
       font-weight: var(--font-weight-bold);
       font-size: 2.8rem;
       line-height: normal;
+    }
+    .price--old {
+      color: var(--text-color-light);
+      text-decoration: line-through;
     }
   }
   &-box-desc {
@@ -67,6 +72,9 @@
     flex-direction: column;
     gap: 0.5rem;
     margin-bottom: 1.5rem;
+    &__text{
+      text-transform: capitalize;
+    }
     &__dropdown {
       width: 50%;
     }
