--- a/src/pages/DetailProduct/DetailProduct.module.scss
+++ b/src/pages/DetailProduct/DetailProduct.module.scss
@@ -128,6 +128,11 @@
     }
   }
 }
+.wrapper {
+  position: relative;
+  min-height: 70vh;
+  padding: 1rem 0;
+}
 .btn-sidebar {
   padding: 0.5rem 1rem;
   border: 2px solid var(--text-color-light);
@@ -169,22 +174,7 @@
   }
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 100;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.3s ease-in-out;
-  &.active {
-    opacity: 1;
-    visibility: visible;
-  }
-}
+
 
 .content__body {
   margin: 4rem 0 3rem;
@@ -246,17 +236,19 @@
     position: relative;
     &.expanded {
       height: max-content;
-      
     }
-    
+    &.expanded &-btn--toggle {
+      box-shadow: none;
+    }
     &-title {
       color: var(--title-color);
     }
     &-btn--toggle {
-     
+      box-shadow: 0 -20px 10px rgba($color: #fff, $alpha: .8);
       background-color: #fff;
       position: absolute;
-      bottom: 1rem;
+      padding: 1rem;
+      bottom: 0;
       left: 0;
       right: 0;
       text-align: center;
