--- a/src/components/SelectDropdown/SelectDropdown.module.scss
+++ b/src/components/SelectDropdown/SelectDropdown.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-transform: capitalize;
     cursor: pointer;
     i{
       font-size: 1rem;
@@ -29,6 +30,7 @@
   &__opt {
     padding: .7rem 2rem;
     cursor: pointer;
+    text-transform: capitalize;
     &:hover {
       background-color: var(--primary-color);
       color: #fff;
