--- a/src/components/CardCategory/CardCategory.module.scss
+++ b/src/components/CardCategory/CardCategory.module.scss
@@ -15,11 +15,16 @@
     margin-bottom: 1.5rem;
   }
   &__img {
-    transition: .3s linear;
-    line-height: 0;
+    padding-top: 100%;
+    position: relative;
+    transition: .3s ease-in-out;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
   &__name{
-    
     text-transform: uppercase;
     font-weight: var(--font-weight-regular);
     font-size: var(--normal-font-size);
