--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,4 +1,5 @@
 .pagination {
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   gap: .5rem;
@@ -17,6 +18,11 @@
     &.active {
       border-color: var(--primary-color);
       color: var(--primary-color);
+    }
+    &.disable {
+      border-color: var(--border-color);
+      color: var(--border-color);
+      pointer-events: none;
     }
     &:hover {
       background-color: var(--primary-color);
