--- a/src/components/ProductInfo/ProductInfo.module.scss
+++ b/src/components/ProductInfo/ProductInfo.module.scss
@@ -195,6 +195,17 @@
       }
     }
   }
+  &-categories {
+    margin-top: 2rem;
+    display: flex;
+    gap: .5rem;
+    &__link{
+      text-transform: capitalize;
+    }
+    &__link:hover {
+      color: var(--primary-color);
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
