--- a/src/pages/DetailCategory/DetailCategory.module.scss
+++ b/src/pages/DetailCategory/DetailCategory.module.scss
@@ -322,8 +322,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    justify-content: flex-end;
   }
-  &__sort-text,
+  
   &__show-item-text {
     font-size: var(--small-font-size);
     text-transform: capitalize;
@@ -331,7 +332,8 @@
 }
 .content {
   &__product {
-    min-height: 50vh;
+    min-height: 100vh;
+    position: relative;
   }
 }
 
