--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -71,13 +71,16 @@ input {
   width: 100%;
   height: 100%;
   font-family: 'Roboto', sans-serif;
+  color: var(--text-color);
   &:focus {
     outline: none;
+   
   }
 }
 
 button {
   cursor: pointer;
+  color: var(--text-color);
 }
 
 table {
