--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -14,6 +14,7 @@
 
 .wrapper {
   position: relative;
+  min-height: 70vh;
 }
 
 .heading {
@@ -54,6 +55,11 @@
   }
   &__opts {
     font-size: var(--small-font-size);
+  }
+  &__opt {
+    &-name, &-value {
+      text-transform: capitalize;
+    }
   }
   &__price {
     &-new {
