--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -72,31 +72,92 @@
     display: flex;
     height: 100%;
     position: relative;
-    input {
-      width: 500px;
-      border: 1px solid var(--border-color);
-      border-top-left-radius: 5px;
-      border-bottom-left-radius: 5px;
-      padding-left: 2rem;
-      padding-right: 10rem;
+    &-input {
+      height: 100%;
+      position: relative;
+      input {
+        width: 450px;
+        border: 1px solid var(--border-color);
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        padding: 0 2rem;
+        padding-right: 4rem;
+      }
+
+    }
+    &-clear {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 2rem;
+      font-size: 1.6rem;
+      width: 1.8rem;
+      height: 1.8rem;
+      
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     &-button {
-      position: absolute;
-      right: 0;
-      top: 0;
-      bottom: 0;
+      padding: 0 4rem;
+      font-size: var(--icon-font-size);
+      position: relative;
       background-color: var(--primary-color);
-      border: 0;
-      padding: 0 3rem;
-      font-size: 2rem;
-      cursor: pointer;
+      border: none;
       color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
+      i{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
       &:hover {
         background-color: var(--primary-color-hover);
+      }
+    }
+    &-results {
+      position: absolute;
+      left: 0;
+      top: calc(100% + .5rem);
+      width: 100%;
+      background-color: #fff;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px;
+      border-radius: 3px;
+      z-index: 100;
+      overflow: hidden;
+      padding: 1rem 0;
+      
+      visibility: hidden;
+      &.active {
+        visibility: visible;
+      }
+      
+      &__inner {
+        
+        max-height: 20.5rem;
+        overflow-y: scroll;
+        &::-webkit-scrollbar {
+          width: 5px;
+          background-color: transparent;
+        }
+        &::-webkit-scrollbar-thumb
+        {
+          border-radius: 10px;
+          background-color: var(--text-color);
+        }
+      }
+      &__item {
+        
+        &:hover {
+          background-color: var(--bg-color);
+          color: var(--primary-color);
+        }
+      }
+      &__link {
+        width: 100%;
+        padding: 1rem 2rem;
       }
     }
   }
