--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,12 +1,70 @@
-
+.wrapper {
+  
+}
 
 .content {
   margin-top: var(--header-height-mobile);
-  min-height: 70vh;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  background-color: #fff;
+  z-index: 100;
+  width: 27rem;
+  height: 100vh;
+  max-height: 100vh;
+  padding: 2rem;
+  transition: left .4s ease-in-out;
+  &.active {
+    left: 0;
+  }
+  &__logo {
+    text-align: center;
+    height: 4.2rem;
+    line-height: 0;
+    margin-bottom: 2.5rem;
+  }
+  &__search {
+    display: flex;
+    height: 3.5rem;
+    margin-bottom: 2.5rem;
+    input{
+      border: 1px solid var(--border-color);
+      padding: 0 1.5rem;
+    }
+    &-btn {
+      padding: 0 1.5rem;
+      border: none;
+      background-color: var(--primary-color);
+      color: #fff;
+      font-size: var(--icon-font-size);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__list {
+
+  }
+  &__item {
+    padding: 1rem 0;
+    text-transform: capitalize;
+    border-bottom: 1px solid var(--border-color);
+    position: relative;
+    &.active {
+      color: var(--primary-color);
+    }
+  }
+  &__link {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .content {
     margin-top: 0;
+    
   }
 }
