--- a/src/pages/DetailProduct/DetailProduct.module.scss
+++ b/src/pages/DetailProduct/DetailProduct.module.scss
@@ -131,7 +131,7 @@
 .wrapper {
   position: relative;
   min-height: 70vh;
-  padding: 1rem 0;
+  padding-top: 2rem;
 }
 .btn-sidebar {
   padding: 0.5rem 1rem;
