--- a/src/pages/DetailCategory/DetailCategory.module.scss
+++ b/src/pages/DetailCategory/DetailCategory.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 1rem 0;
+  padding-top: 2rem;
   position: relative;
   min-height: 70vh;
 }
@@ -331,6 +331,7 @@
   }
 }
 .content {
+  margin-bottom: 2rem;
   &__product {
     min-height: 100vh;
     position: relative;
