fix link and edt readme

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -156,8 +156,9 @@
         }
       }
       &__link {
-        width: 100%;
+        
         padding: 1rem 2rem;
+        cursor: pointer;
       }
       &__empty {
         padding: 1rem 2rem;
